# telegram-shopping-bot

./: .env.example  .gitignore  NOTION-SETUP.md  README.md  bootstrap-gui.cmd  gui-splash.ps1  install-autostart.cmd  pyproject.toml  requirements.txt  start-bot-background.cmd  start-gui.vbs  stop-bot.cmd  uninstall-autostart.cmd  打开控制面板.bat
scripts/: check_setup.py  diagnose_vision.py  notion_schema.py
src/shopping_bot/: __init__.py  bot.py  categories.py  config.py  models.py  routing.py  text_format.py
src/shopping_bot/gui/: __init__.py  __main__.py  _window.py  app.py  check_runner.py  env_store.py  gui_prefs.py  launcher.py  paths.py  process_manager.py  resizable_textbox.py  splash_state.py  themes.py  tutorial.py
src/shopping_bot/services/: notion.py  openrouter.py  product_extract.py  search.py  vision.py
tests/: test_openrouter_errors.py  test_routing.py
