[project]
name = "telegram-shopping-bot"
version = "0.1.0"
description = "Telegram bot for model Q&A and Notion shopping list capture."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.6",
    "ddgs>=9.0.0",
    "customtkinter>=5.2.2",
    "psutil>=5.9.0",
]

[project.scripts]
shopping-bot = "shopping_bot.bot:main"
shopping-bot-gui = "shopping_bot.gui.launcher:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopping_bot"]
